fix invite again

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <div class="message" id="message">
     </div>
-    <button class="yes" id="invite" onclick="window.location.href='invitation.html'" style="opacity: 0" onclick="openInvite()">Click me for ur invitation 💌</button>
+    <button class="yes" id="invite" onclick="window.location.href='invitation.html'" style="opacity: 0">Click me for ur invitation 💌</button>
 </div>
 
 <script>
