--- a/invitation.html
+++ b/invitation.html
@@ -78,7 +78,7 @@
     </p>
 
     <p>
-        sadly, bintana is closed on sundays so let's go to j-mall to pick out matching gachapons, walk around in KKV, then have dinner at Yoshuken! 
+        sadly, bintana is closed on sundays so let's go to j-mall to pick out matching gachapons, walk around in KKV, then have dinner at Yamichan! 
     </p>
 
     <div class="signature">
